[package]
name = "volumes"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.13.0"
sdl2 = "0.32.2"
glm = { package = "nalgebra-glm", version = "0.4.0" }
imgui = "0.1.0"
imgui-ext = "0.3.0"
imgui-sdl2 = "0.6.0"
imgui-opengl-renderer = "0.5.0"